# Spectrotool

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
SpectrotoolApp/: Project.cpp  Project.hpp  SpectrotoolApp.cpp  SpectrotoolApp.hpp  SpectrotoolAppInclude.hpp  Store.cpp  Store.hpp  Worker.cpp  Worker.hpp
SpectrotoolApp/Panels/: DataTablePanel.cpp  DataTablePanel.hpp  FilePanel.cpp  FilePanel.hpp  MenuPanel.cpp  MenuPanel.hpp  OverviewPanel.cpp  OverviewPanel.hpp  Panel.cpp  Panel.hpp  ProjectPanel.cpp  ProjectPanel.hpp
TestResources/: ReplacementRules.xlsx
TestResources/CorrectionFactor/: EPA.xlsx  Spectrotool_Verifier_Input.xlsx  Spectrotool_Verifier_Output.xlsx  Spectrotool_Verifier_SampleList.xlsx  VMM.xlsx  Wellington.xlsx
TestResources/HappyDay/: 220115_PFASFORWARD_VMM.xlsx  Correction factors_TG.xlsx  CorrectionFactors_MPFAC-HIF-ES.docx  CorrectionFactors_MPFAC-MXA.docx  Correction_factors_TG.xlsx  samplelist.xlsx
TestResources/HappyDaySmall/: 220115_PFASFORWARD_VMM.xlsx
TestResources/SampleList/: SampleList.xlsx  SampleListData.xlsx
cmake/: CMakeLibs.cmake
docs/: CorrectionFactor.md
include/Spectrotool/: Compound.hpp  CorrectionFactor.hpp  DataTable.hpp  Defs.hpp  MassSpecFile.hpp  SampleList.hpp  SampleListFile.hpp  Worksheet.hpp
include/Spectrotool/Parsers/: CorrectionFactorParser.hpp  DataTableParser.hpp  ParserMessages.hpp  SampleListParser.hpp
src/: Compound.cpp  Compound.hpp  CorrectionFactor.cpp  DataTable.cpp  Defs.hpp  MassSpecFile.cpp  SampleList.cpp  SampleListFile.cpp  Worksheet.cpp  Worksheet.hpp  utils.cpp  utils.hpp
src/Parsers/: CorrectionFactorParser.cpp  DataTableParser.cpp  SampleListParser.cpp
test/: TestCorrectionFactor.cpp  TestDataTable.cpp  TestDataTableParser.cpp  TestMassSpecFile.cpp  TestMassSpecFile.hpp  TestSampleList.cpp  TestSampleListFile.cpp  TestSampleListFile.hpp  TestWorkSheet.cpp  TestWorkSheet.hpp  test.cpp
test/Parsers/: TestCorrectionFactorParser.cpp  TestDataTableParser.cpp  TestSampleListParser.cpp
